# Kratos

./: .clang-format  .gitignore  appveyor.yml
applications/: CMakeLists.txt  applications_interface.py
applications/ALEapplication/: CMakeLists.txt
applications/ALEapplication/custom_python/: add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h  add_custom_strategies_to_python_mpi.cpp  ale_python_application.cpp
applications/ALEapplication/custom_strategies/strategies/: laplacian_meshmoving_strategy.h  trilinos_laplacian_meshmoving_strategy.h  trilinos_structural_meshmoving_strategy.h
applications/ALEapplication/python_scripts/: ale_navier_stokes_solver_fractionalstep.py  trilinos_mesh_solver_laplacian.py
applications/ALEapplication/tests/: test_MainKratos.py
applications/ContactStructuralMechanicsApplication/: CMakeLists.txt  contact_structural_mechanics_application.cpp  contact_structural_mechanics_application_variables.cpp  contact_structural_mechanics_application_variables.h
applications/DEM_application/: CMakeLists.txt  DEM_application.cpp
applications/FemToDemApplication/: CMakeLists.txt  FemToDemApplication.py  fem_to_dem_application.cpp  fem_to_dem_application.h  fem_to_dem_application_variables.cpp  fem_to_dem_application_variables.h
applications/MappingApplication/: CMakeLists.txt  mapping_application.cpp  mapping_application.h  mapping_application_variables.cpp  mapping_application_variables.h
applications/MappingApplication/custom_conditions/: base_mapper_condition.cpp  base_mapper_condition.h  mortar_mapper_condition.cpp  mortar_mapper_condition.h  nearest_element_mapper_condition.cpp  nearest_element_mapper_condition.h  nearest_neighbor_mapper_condition.cpp  nearest_neighbor_mapper_condition.h
applications/MappingApplication/custom_mappers/: mapper.h  mapper_matrix_based.h  mortar_mapper.h  nearest_element_mapper.h  nearest_element_mapper_matrix.h  nearest_neighbor_mapper.h  nearest_neighbor_mapper_matrix.h
applications/MappingApplication/custom_python/: add_custom_mappers_mpi_to_python.cpp  add_custom_mappers_to_python.cpp  add_custom_mappers_to_python.h  add_custom_processes_to_python.h  add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  mapping_python_application.cpp
applications/MappingApplication/custom_strategies/builders/: mapping_matrix_builder.h  trilinos_mapping_matrix_builder.h  ublas_mapping_matrix_builder.h
applications/MappingApplication/custom_strategies/custom_builders/: base_mapping_matrix_builder.h  mapping_matrix_builder.h  trilinos_mapping_matrix_builder.h  ublas_mapping_matrix_builder.h
applications/MappingApplication/custom_strategies/schemes/: mapper_scheme.h
applications/MappingApplication/custom_strategies/strategies/: mapper_strategy.h
applications/MappingApplication/custom_utilities/: interface_base_object.h  interface_communicator.cpp  interface_communicator.h  interface_geometry_object.h  interface_node.h  interface_object.h  interface_object_manager_base.h  interface_object_manager_parallel.h  interface_object_manager_serial.h  interface_object_nearest_neighbor.h  interface_preprocess.h  interface_preprocessor.cpp  interface_preprocessor.h  interface_search_structure_mpi.h  mapper_communicator.h  mapper_factory.cpp  mapper_factory_new.h  mapper_flags.cpp  mapper_flags.h  mapper_mpi_communicator.h  mapper_search_object_nearest_neigbor.h  mapper_utilities.cpp  mapper_utilities.h  mapper_utilities_mpi.h
applications/MappingApplication/python_scripts/: mapper_base.py  mapper_matrix_based.py  mortar_mapper.py  nearest_element_mapper.py  nearest_element_mapper_matrix_based.py  nearest_element_mapper_mpi.py  nearest_neighbor_mapper.py  nearest_neighbor_mapper_matrix_based.py  nearest_neighbor_mapper_mpi.py  python_mapper_wrapper.py  trilinos_mortar_mapper.py  trilinos_nearest_element_mapper_matrix_based.py  trilinos_nearest_neighbor_mapper_matrix_based.py
applications/MappingApplication/test_examples/TestCases_for_new_design/: test1.py
applications/MappingApplication/tests/: KratosExecuteMapperTests.py  NearestElementMapperTest2D.py  NearestNeighborMapperTest.py  SmallTests.py  output_kratos.txt  output_tests.txt  test_MappingApplication.py  test_patch_test_mapper.py
applications/MappingApplication/tests/MapperTests_json/: NearestNeighborMatrixBased_line_parameters.json  NearestNeighborMatrixBased_surface_parameters.json  NearestNeighborMatrixBased_volume_parameters.json
applications/MeshingApplication/: CMakeLists.txt  meshing_application.cpp  meshing_application.h
applications/ParticleMechanicsApplication/: CMakeLists.txt  particle_mechanics_application.cpp  particle_mechanics_application.h
applications/ShallowWaterApplication/: CMakeLists.txt  shallow_water_application.cpp  shallow_water_application.h  shallow_water_application_variables.cpp  shallow_water_application_variables.h
applications/ShapeOptimizationApplication/: CMakeLists.txt
applications/StructuralMechanicsApplication/: CMakeLists.txt  structural_mechanics_application.cpp  structural_mechanics_application.h  structural_mechanics_application_variables.cpp  structural_mechanics_application_variables.h
applications/constitutive_laws_application/: constitutive_laws_application.cpp  constitutive_laws_application.h
applications/pfem_2_application/: PFEM2Application.py  pfem_2_application.cpp
applications/trilinos_application/: CMakeLists.txt  trilinos_space.h
kratos/: CMakeLists.txt
kratos/geometries/: triangle_2d_6.h
kratos/includes/: kratos_components.h  matrix_market_interface.h  variables.h
kratos/processes/: simple_mortar_mapper_process.cpp
kratos/python/: add_containers_to_python.cpp  add_matrix_market_interface_to_python.cpp  add_utilities_to_python.cpp
kratos/python_scripts/: new_linear_solver_factory.py
kratos/sources/: kratos_components.cpp  model_part_io.cpp  variables.cpp
kratos/spaces/: ublas_space.h
kratos/utilities/: compute_colors_utility.cpp  compute_colors_utility.h  mortar_utilities.h  (+1 more)
(+1116 files in other folders)
